--- a/fotograf-slub-abednarz.html
+++ b/fotograf-slub-abednarz.html
@@ -69,7 +69,7 @@
                 </li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="galeria-abednarz.html">
                         Galeria</a>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="fotograf-slub-abednarz.html" data-toggle="dropdown-submenu" aria-expanded="false">
+                </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="fotograf-slub-abednarz.html" data-toggle="dropdown-submenu" aria-expanded="true">
                         Oferta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="fotograf-komunia-abednarz.html">Komunie</a><a class="text-black dropdown-item display-4" href="fotograf-slub-abednarz.html" aria-expanded="false">Śluby</a><a class="text-black dropdown-item display-4" href="fotograf-studniowka-abednarz.html" aria-expanded="false">Studniówki i półmetki</a><a class="text-black dropdown-item display-4" href="fotograf-bierzmowanie-abednarz.html" aria-expanded="false">Bierzmowanie</a><a class="text-black dropdown-item display-4" href="fotograf-osiemnastka-abednarz.html" aria-expanded="false">18 Osiemnastki</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="kontakt-abednarz.html" aria-expanded="false" data-toggle="dropdown-submenu">Strefa klienta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="sesje-narzeczenskie-strefa-abednarz.html" aria-expanded="false">Sesje narzeczeńskie</a> <a class="text-black dropdown-item display-4" href="sluby-strefa-klienta.html" aria-expanded="false" target="_blank">Śluby</a> </div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontakt-abednarz.html" aria-expanded="false">
                         Kontakt &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://wa.me/48 576996046">
@@ -80,7 +80,33 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section article content1 cid-s5vrmHAVis" id="content2-1b">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-scs7EmeVep mbr-fullscreen mbr-parallax-background" id="header2-2y">
+
+    
+
+    <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(35, 35, 35);"></div>
+
+    <div class="container align-center">
+        <div class="row justify-content-md-center">
+            <div class="mbr-white col-md-10">
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
+                    FOTOREPORTAŻE ŚLUBNE</h1>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">
+                    czyli klimatyczne ujęcia, piękne portrety oraz niezwykłe plenery</h3>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">
+                    To co mnie wyróżnia to kreatywność, spontaniczność oraz profesjonalizm.<br>Jestem zawsze tam, gdzie dzieje się coś ważnego w dniu Twojego ślubu.<br>Ponadczasowe-poetyckie-energetyczny i dynamiczny reportaż<br>i to wszystko na zdjęciach !</p>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="sluby-strefa-klienta.html">DOWIEDZ SIĘ WIĘCEJ</a></div>
+            </div>
+        </div>
+    </div>
+    <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
+        <a href="#next">
+            <i class="mbri-down mbr-iconfont"></i>
+        </a>
+    </div>
+</section>
+
+<section class="mbr-section article content1 cid-s5vrmHAVis" id="content2-1b">
 
      
 
@@ -231,6 +257,7 @@
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
