--- a/sesje-narzeczenskie-strefa-abednarz.html
+++ b/sesje-narzeczenskie-strefa-abednarz.html
@@ -69,7 +69,7 @@
                 </li><li class="nav-item">
                     <a class="nav-link link text-black display-4" href="galeria-abednarz.html">
                         Galeria</a>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="fotograf-slub-abednarz.html" data-toggle="dropdown-submenu" aria-expanded="false">
+                </li><li class="nav-item dropdown open"><a class="nav-link link text-black dropdown-toggle display-4" href="fotograf-slub-abednarz.html" data-toggle="dropdown-submenu" aria-expanded="true">
                         Oferta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="fotograf-komunia-abednarz.html">Komunie</a><a class="text-black dropdown-item display-4" href="fotograf-slub-abednarz.html" aria-expanded="false">Śluby</a><a class="text-black dropdown-item display-4" href="fotograf-studniowka-abednarz.html" aria-expanded="false">Studniówki i półmetki</a><a class="text-black dropdown-item display-4" href="fotograf-bierzmowanie-abednarz.html" aria-expanded="false">Bierzmowanie</a><a class="text-black dropdown-item display-4" href="fotograf-osiemnastka-abednarz.html" aria-expanded="false">18 Osiemnastki</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="kontakt-abednarz.html" aria-expanded="false" data-toggle="dropdown-submenu">Strefa klienta &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="sesje-narzeczenskie-strefa-abednarz.html" aria-expanded="false">Sesje narzeczeńskie</a> <a class="text-black dropdown-item display-4" href="sluby-strefa-klienta.html" aria-expanded="false" target="_blank">Śluby</a> </div></li><li class="nav-item"><a class="nav-link link text-black display-4" href="kontakt-abednarz.html" aria-expanded="false">
                         Kontakt &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://wa.me/48 576996046">
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="cid-s7AyLy0uyi" id="image4-23">
+<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="cid-s7AyLy0uyi" id="image4-23">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
