--- a/galeria-abednarz.html
+++ b/galeria-abednarz.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dWiyb1Fu" id="gallery2-6">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own website for free</a></section><section class="mbr-gallery mbr-slider-carousel cid-s5dWiyb1Fu" id="gallery2-6">
 
     
 
