--- a/omnie-abednarz.html
+++ b/omnie-abednarz.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
 
     
 
@@ -245,7 +245,7 @@
   
   
 <input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Akceptuję' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="W celu poprawy jakości naszych usług, stosujemy na tej stronie pliki cookies..">
-    <input name="animation" type="hidden">
    <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
