--- a/fotograf-slub-abednarz.html
+++ b/fotograf-slub-abednarz.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="cid-scs7EmeVep mbr-fullscreen" id="header2-2y">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="cid-scs7EmeVep mbr-fullscreen" id="header2-2y">
 
     
 
@@ -90,7 +90,7 @@
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
-                    FOTOREPORTAŻE ŚLUBNE</h1>
+                    <br><br><br>FOTOREPORTAŻE ŚLUBNE</h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">
                     czyli klimatyczne ujęcia, piękne portrety oraz niezwykłe plenery</h3>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
