--- a/fotograf-slub-abednarz.html
+++ b/fotograf-slub-abednarz.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="cid-scs7EmeVep mbr-fullscreen" id="header2-2y">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="cid-scs7EmeVep mbr-fullscreen mbr-parallax-background" id="header2-2y">
 
     
 
@@ -257,6 +257,7 @@
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
