create github pages

--- a/fotograf-slub-abednarz.html
+++ b/fotograf-slub-abednarz.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-scs7EmeVep mbr-fullscreen mbr-parallax-background" id="header2-2y">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="cid-scs7EmeVep mbr-fullscreen mbr-parallax-background" id="header2-2y">
 
     
 
@@ -130,7 +130,7 @@
 </strong><strong>Czas pracy fotografa:&nbsp;</strong></p><p>1 dzień - przygotowania + Kościół/USC + zabawa (do ok. godziny 1)
 </p><p>2 dzień - plener
 </p><p><strong>
-</strong><strong>Cena:&nbsp;</strong></p><p>2500 zł na terenie województwa śląskiego
+</strong><strong>Cena:&nbsp;</strong></p><p>2800 zł na terenie województwa śląskiego
 </p><p>powiaty:
 </p><p>Katowice
 </p><p>Bielsko-Biała + bielski
