--- a/sluby-strefa-klienta.html
+++ b/sluby-strefa-klienta.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="cid-scitFIqwPn" id="image4-2h">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="cid-scitFIqwPn" id="image4-2h">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
