--- a/komunijny-czerwiec.html
+++ b/komunijny-czerwiec.html
@@ -60,7 +60,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section article content1 cid-s95UiMdGy1" id="content1-2e">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section article content1 cid-s95UiMdGy1" id="content1-2e">
     
      
 
