--- a/sluby-strefa-klienta.html
+++ b/sluby-strefa-klienta.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="cid-scitFIqwPn" id="image4-2h">
+<section class="engine"><a href="https://mobirise.info/e">make your own site for free</a></section><section class="cid-scitFIqwPn" id="image4-2h">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
