--- a/sesje-narzeczenskie-strefa-abednarz.html
+++ b/sesje-narzeczenskie-strefa-abednarz.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="cid-s7AyLy0uyi" id="image4-23">
+<section class="engine"><a href="https://mobirise.info/g">build a site</a></section><section class="cid-s7AyLy0uyi" id="image4-23">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
