--- a/galeria2-abednarz-fotograf.html
+++ b/galeria2-abednarz-fotograf.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="mbr-gallery mbr-slider-carousel cid-skSG39kmFx" id="gallery3-3b">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-skSG39kmFx" id="gallery3-3b">
 
     
 
