--- a/komunijny-czerwiec.html
+++ b/komunijny-czerwiec.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="cid-s95UqhdELT" id="image4-2f">
+<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="cid-s95UqhdELT" id="image4-2f">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
