--- a/fotograf-osiemnastka-abednarz.html
+++ b/fotograf-osiemnastka-abednarz.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site builder</a></section><section class="cid-s5RllZc863 mbr-parallax-background" id="header2-1w">
+<section class="engine"><a href="https://mobirise.info/f">simple site maker</a></section><section class="cid-s5RllZc863 mbr-parallax-background" id="header2-1w">
 
     
 
