--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -93,7 +93,7 @@
                     FOTOGRAFIA PRZEZ DUŻE &nbsp;F</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Kiedy fotografuję, to otwartym okiem patrzę na świat,<br>a zamkniętym spoglądam w głąb siebie</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="galeria-abednarz.html">MOJE PORTFOLIO</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="galeria-abednarz-fotograf-slub.html">MOJE PORTFOLIO</a>
                     <a class="btn btn-md btn-white-outline display-4" href="omnie-abednarz.html">O MNIE</a></div>
             </div>
         </div>
