--- a/fotograf-bierzmowanie-abednarz.html
+++ b/fotograf-bierzmowanie-abednarz.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="mbr-section article content1 cid-s5vOVgEhWj" id="content2-1q">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section article content1 cid-s5vOVgEhWj" id="content2-1q">
 
      
 
