--- a/sesje-narzeczenskie-strefa-abednarz.html
+++ b/sesje-narzeczenskie-strefa-abednarz.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-s7AyLy0uyi" id="image4-23">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="cid-s7AyLy0uyi" id="image4-23">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
