create github pages

--- a/galeria-abednarz-fotograf-slub.html
+++ b/galeria-abednarz-fotograf-slub.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-skSG39kmFx" id="gallery3-3b">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="mbr-gallery mbr-slider-carousel cid-skSG39kmFx" id="gallery3-3b">
 
     
 
