--- a/omnie-abednarz.html
+++ b/omnie-abednarz.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
+<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="counters4 counters cid-s5e9sLgyiM" id="counters4-b">
 
     
 
@@ -133,7 +133,7 @@
                             </div>
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Tutaj teraz jestem</h4>
-                                <p class="mbr-content-text mbr-fonts-style display-7">Mam już ponad 40 wiosen, cały czas zdobywam doświadczenie. Zauważyłem, że mam jeszcze wiele do zrobienia w temacie fotografii. Specjalizuję się w fotografii reportażowej. Tworzę reportaże na ślubach i wszelkiego rodzaju uroczystościach, takich jak komunie, chrzty czy jubileusze. Jestem tam, gdzie coś się dzieje, przyjechał ktoś ważny, lub trzeba coś zarchiwizować. Interesuje mnie fotografia reklamowo-produktowa, a w wolnych chwilach zdarza mi się cyknąć jakąś fotkę krajobrazu. A może jakiś portret?</p>
+                                <p class="mbr-content-text mbr-fonts-style display-7">Mam już ponad 40 wiosen, cały czas zdobywam doświadczenie. Zauważyłem, że mam jeszcze wiele do zrobienia w temacie fotografii. Specjalizuję się w fotografii reportażowej. Tworzę reportaże na ślubach i wszelkiego rodzaju uroczystościach, takich jak komunie, chrzty czy jubileusze. Jestem tam, gdzie coś się dzieje, przyjechał ktoś ważny, lub trzeba coś zarchiwizować. Interesuje mnie fotografia nieruchomości i wnętrz oraz reklamowo-produktowa, a w wolnych chwilach zdarza mi się cyknąć jakąś fotkę krajobrazu. A może jakiś portret?</p>
                             </div>
                         </div>
                     </div>
