--- a/fotograf_domy_mieszkania.html
+++ b/fotograf_domy_mieszkania.html
@@ -12,15 +12,16 @@
   
   <title>Fotograf domów mieszkań oraz wnętrz</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/facebook-plugin/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="stylesheet" href="assets/gallery/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -80,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="cid-smgrL0vfbL mbr-fullscreen mbr-parallax-background" id="header2-3d">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="cid-smgrL0vfbL mbr-fullscreen mbr-parallax-background" id="header2-3d">
 
     
 
@@ -111,10 +112,20 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">
-                <blockquote><p><strong>Zdjęcia wnętrz</strong></p><p><span style="font-size: 1.09rem;">Wykonam wszelkiego rodzaju zdjęcia wnętrz mieszkań oraz domów, które są przygotowywane pod wynajem lub sprzedaż.<br>Przemyślane kadry, uwypuklenie istotnych detali - moje fotografie wzbudzą pozytywne emocje wśród osób zainteresowanych Twoją nieruchomością.&nbsp;</span></p><p><strong>Zdjęcia reklamowe i katalogowe restauracji oraz hoteli</strong></p><p>Sfotografuję Twoją restaurację oraz hotel, a wykonane przeze mnie zdjęcia możesz wykorzystać do zareklamowania swojego biznesu w internecie oraz w katalogach drukowanych.</p><p><strong>Fotografia do Home Staging</strong></p><p><span style="font-size: 1.09rem;">Zaaranżowałeś swoją nieruchomość, dokonałeś koniecznych remontów.Twoje mieszkanie przeszło wyjątkową metamorfozę. Pozostało Ci już zaprezentować mieszkanie potencjalnym klientom - tutaj pojawiam się "ja", pozyskaj profesjonalne zdjęcia, a w zamian otrzymasz atrakcyjne fotografie swojego mieszkania lub domu, dzieki którym szybko znajdziesz nowych klientów.</span></p><p><strong>Przygotowanie wnętrza do zdjęć</strong></p><p><span style="font-size: 1.09rem;">Jeśli to konieczne, przygotowuję pomieszczenie do zdjęć - zestawiam dodatki, planuję kadry, aby pokazać nieruchomość w jak najbardziej korzystnym świetle.</span></p><p><strong>Ile Cię to będzie kosztowało?</strong></p><p>Cenę ustalam indywidualnie w zależności od <span style="font-style: normal;">określonego </span>projektu, zaangażowania w realizację i wszystkich kosztów związanych z przedsięwzięciem.</p><p>Realizuję sesje nieruchomości już od 150 zł.</p><p>Zapraszam do współpracy.</p></blockquote>
+                <blockquote><p><strong>Zdjęcia wnętrz</strong></p><p><span style="font-size: 1.09rem;">Wykonam wszelkiego rodzaju zdjęcia wnętrz mieszkań oraz domów, które są przygotowywane pod wynajem lub sprzedaż.<br>Przemyślane kadry, uwypuklenie istotnych detali - moje fotografie wzbudzą pozytywne emocje wśród osób zainteresowanych Twoją nieruchomością.&nbsp;</span></p><p><strong>Zdjęcia reklamowe i katalogowe restauracji oraz hoteli</strong></p><p>Sfotografuję Twoją restaurację oraz hotel, a wykonane przeze mnie zdjęcia możesz wykorzystać do zareklamowania swojego biznesu w internecie oraz w katalogach drukowanych.</p><p><strong>Fotografia do Home Staging</strong></p><p><span style="font-size: 1.09rem;">Zaaranżowałeś swoją nieruchomość, dokonałeś koniecznych remontów. Twoje mieszkanie przeszło wyjątkową metamorfozę. Pozostało Ci już zaprezentować mieszkanie potencjalnym klientom - tutaj pojawiam się "ja". Pozyskaj profesjonalne zdjęcia, a w zamian otrzymasz atrakcyjne fotografie swojego mieszkania lub domu, dzieki którym szybko znajdziesz nowych klientów.</span></p><p><strong>Przygotowanie wnętrza do zdjęć</strong></p><p><span style="font-size: 1.09rem;">Jeśli to konieczne, przygotowuję pomieszczenie do zdjęć - zestawiam dodatki, planuję kadry, aby pokazać nieruchomość w jak najbardziej korzystnym świetle.</span></p><p><strong>Ile Cię to będzie kosztowało?</strong></p><p>Cenę ustalam indywidualnie w zależności od <span style="font-style: normal;">określonego </span>projektu, zaangażowania w realizację i wszystkich kosztów związanych z przedsięwzięciem.</p><p>Realizuję sesje nieruchomości już od 150 zł.</p><p>Zapraszam do współpracy.</p></blockquote>
             </div>
         </div>
     </div>
+</section>
+
+<section class="mbr-gallery mbr-slider-carousel cid-smgFwWgkt9" id="gallery3-3h">
+
+    
+
+    <div>
+        <div><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Niesamowite"><div href="#lb-gallery3-3h" data-slide-to="0" data-toggle="modal"><img src="assets/images/mieszkanie-1-2000x1328-800x531.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Wrażliwe"><div href="#lb-gallery3-3h" data-slide-to="1" data-toggle="modal"><img src="assets/images/mieszkanie-5-2000x1335-800x534.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Twórcze"><div href="#lb-gallery3-3h" data-slide-to="2" data-toggle="modal"><img src="assets/images/mieszkanie-6-2000x1335-800x534.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Animowane"><div href="#lb-gallery3-3h" data-slide-to="3" data-toggle="modal"><img src="assets/images/mieszkanie-9-1920x1280-800x533.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Niesamowite"><div href="#lb-gallery3-3h" data-slide-to="4" data-toggle="modal"><img src="assets/images/mieszkanie-8-1920x1281-800x534.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Niesamowite"><div href="#lb-gallery3-3h" data-slide-to="5" data-toggle="modal"><img src="assets/images/mieszkanie-2-2000x1519-800x608.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Wrażliwe"><div href="#lb-gallery3-3h" data-slide-to="6" data-toggle="modal"><img src="assets/images/mieszkanie-7-2000x1335-800x534.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p0" data-video-url="false" data-tags="Animowane"><div href="#lb-gallery3-3h" data-slide-to="7" data-toggle="modal"><img src="assets/images/mieszkanie-3-2000x1333-800x533.jpg" alt="" title=""><span class="icon-focus"></span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery3-3h"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item active"><img src="assets/images/mieszkanie-1-2000x1328.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/mieszkanie-5-2000x1335.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/mieszkanie-6-2000x1335.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/mieszkanie-9-1920x1280.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/mieszkanie-8-1920x1281.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/mieszkanie-2-2000x1519.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/mieszkanie-7-2000x1335.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/mieszkanie-3-2000x1333.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery3-3h"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery3-3h"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
+    </div>
+
 </section>
 
 <section class="cid-smgrL2AOeR" id="footer1-3g">
@@ -202,20 +213,27 @@
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5"></script>
   <script src="https://apis.google.com/js/plusone.js"></script>
   <script src="assets/facebook-plugin/facebook-script.js"></script>
-  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
   <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/masonry/masonry.pkgd.min.js"></script>
+  <script src="assets/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
+  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
+  <script src="assets/gallery/player.min.js"></script>
+  <script src="assets/gallery/script.js"></script>
+  <script src="assets/slidervideo/script.js"></script>
   
   
 <input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Akceptuję' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="W celu poprawy jakości naszych usług, stosujemy na tej stronie pliki cookies..">
