--- a/sluby-strefa-klienta.html
+++ b/sluby-strefa-klienta.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="cid-scitFIqwPn" id="image4-2h">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="cid-scitFIqwPn" id="image4-2h">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
