create github pages

--- a/fotograf_domy_mieszkania.html
+++ b/fotograf_domy_mieszkania.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="cid-smgrL0vfbL mbr-fullscreen mbr-parallax-background" id="header2-3d">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="cid-smgrL0vfbL mbr-fullscreen mbr-parallax-background" id="header2-3d">
 
     
 
