--- a/komunijny-czerwiec.html
+++ b/komunijny-czerwiec.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-s95UqhdELT" id="image4-2f">
+<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="cid-s95UqhdELT" id="image4-2f">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
